# differentiable-dbm

./: .env  .envrc  .gitignore  .pythonrc.py  README.md  pyproject.toml  requirements.txt
adversarial_dbm/: pyproject.toml
adversarial_dbm_gui/: defs.py  main.py
adversarial_dbm_gui/adversarial/: deepfool.py  deepfool_svm.py
adversarial_dbm_gui/classifiers/: cnnclassifier.py  logistic.py  nnclassifier.py
adversarial_dbm_gui/components/: datapoint.py  mainwindow.py  menubar.py  plot.py  plotcontrols.py
adversarial_dbm_gui/components/painters/: confidence_painter.py  dbm_painter.py  grad_map_painter.py  neighbors_painter.py  painter.py  train_set_painter.py  wormhole_painter.py
adversarial_dbm_gui/compute/: dbm_manager.py  neighbors.py
adversarial_dbm_gui/data/: __init__.py  dataset.py
adversarial_dbm_gui/projection/: dbms.py  nninv.py  nninv2.py  nninv_skip.py  qmetrics.py
adversarial_dbm_gui/utils/: early_stop.py
core_adversarial_dbm/: pyproject.toml
core_adversarial_dbm/core_adversarial_dbm/: __init__.py  defs.py  run_experiments.py
core_adversarial_dbm/core_adversarial_dbm/adversarial/: deepfool_svm.py
core_adversarial_dbm/core_adversarial_dbm/classifiers/: metrics.py  nnclassifier.py
core_adversarial_dbm/core_adversarial_dbm/compute/: dbm_manager.py  gradient.py  neighbors.py
core_adversarial_dbm/core_adversarial_dbm/conf/: config.yaml
core_adversarial_dbm/core_adversarial_dbm/conf/classifier/: nn.yaml  svm.yaml
core_adversarial_dbm/core_adversarial_dbm/data/: __init__.py  dataset.py
core_adversarial_dbm/core_adversarial_dbm/projection/: nninv.py  qmetrics.py
core_adversarial_dbm/drafts/: unproject_vs_me.py
core_adversarial_dbm/multirun/: compose_images.py  justfile
drafts/: features_cifar10.ipynb  grid_iter_circles.py
